tests/ui/tag.stderr
error: no #[tag] given
 --> $DIR/tag.rs:8:9
  |
8 |         x: String,
  |         ^^^^^^^^^

error: no #[tag] given
  --> $DIR/tag.rs:13:9
   |
13 |         V,
   |         ^

error: no #[tag] given
  --> $DIR/tag.rs:22:9
   |
22 |         x: String,
   |         ^^^^^^^^^

error: no #[tag] given
  --> $DIR/tag.rs:27:9
   |
27 |         V,
   |         ^
